// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/password/demo/basic.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-password-wrapper c7n-pro-password-empty"
    >
      <input
        class="c7n-pro-password-fix-autofill"
        tabindex="-1"
      />
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-password"
          placeholder="请输入密码"
          type="password"
          value=""
        />
        <div
          class="c7n-pro-password-inner-button"
        >
          <i
            class="icon icon-visibility_off"
          />
        </div>
      </label>
    </span>
    <span />
  </div>
  <div
    class="c7n-col-12"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-password-wrapper c7n-pro-password-empty"
    >
      <input
        class="c7n-pro-password-fix-autofill"
        tabindex="-1"
      />
      <label>
        <input
          autocomplete="off"
          class="c7n-pro-password"
          placeholder="无揭示按钮"
          type="password"
          value=""
        />
      </label>
    </span>
    <span />
  </div>
</div>
`;

exports[`renders ./components-pro/password/demo/controlled.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-password-wrapper"
  >
    <input
      class="c7n-pro-password-fix-autofill"
      tabindex="-1"
    />
    <label>
      <input
        autocomplete="off"
        class="c7n-pro-password"
        type="password"
        value="default"
      />
      <div
        class="c7n-pro-password-inner-button"
      >
        <i
          class="icon icon-visibility_off"
        />
      </div>
    </label>
  </span>,
  <span />,
]
`;

exports[`renders ./components-pro/password/demo/dataset.md correctly 1`] = `
Array [
  <span
    class="c7n-pro-password-wrapper c7n-pro-password-required"
  >
    <input
      class="c7n-pro-password-fix-autofill"
      tabindex="-1"
    />
    <label>
      <input
        autocomplete="off"
        class="c7n-pro-password"
        name="first-name"
        type="password"
        value="choerodon-pro"
      />
      <div
        class="c7n-pro-password-inner-button"
      >
        <i
          class="icon icon-visibility_off"
        />
      </div>
    </label>
  </span>,
  <span />,
]
`;
